--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 * Add change event callback
 
+1.0.4 - Bug fixes
+* Added Grunt
+* Updated Gulp and NPM
+* Fixed #58 activeToolbarClass only applied to first button
+* Fixed #19 Toolbar is not being updated
+
 1.0.3 - Bug fixes and updated content
 * General bug fixes and improvements
 * Added gulpfile.js to streamline 
